# aistats20submodular

./: .gitignore  CMakeLists.txt  Readme.md  build.sh  download_ml.sh  run_dblp.sh  run_fb.sh  run_ml.sh
example_results/: dblp_result.csv  fb_result.csv  ml_result.csv
headers/: Dataset.h  Graph.h  debugUtils.h  movie_data.h  utils.h
headers/algorithms/: Algorithm.h  BranchingMRT.h  Distributed.h  Greedy.h  GreedyPP.h  MarginalRatioThresholding.h  Mode.h  MofiedSimple.h  MultiDimensional.h  SievePP.h  randomAlg.h
headers/inputs/: AverageRatingKnapsack.hNOTCompile  CoverageKnapsack.h  DelegateKnapsack.h  Knapsack.h  LinearKnapsack.h  MoviesKnapsack.h  NonrobustKiller.h  SubtractAverageKnapsack.h  SvdData.h
src/: main.cpp  main_old.cpp  movie_data.cpp  utils.cpp
